--- a/prepros.cfg
+++ b/prepros.cfg
@@ -119,51 +119,6 @@
           "parents": [],
           "type": "html"
         },
-        "dfe0e3d3": {
-          "id": "dfe0e3d3",
-          "path": "_posts/2015-12-30-another-one.markdown",
-          "output": "_posts/2015-12-30-another-one.html",
-          "name": "2015-12-30-another-one.markdown",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "3ce85c2f": {
-          "id": "3ce85c2f",
-          "path": "_posts/2015-12-30-just-another-trial.markdown",
-          "output": "_posts/2015-12-30-just-another-trial.html",
-          "name": "2015-12-30-just-another-trial.markdown",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "b3fc9177": {
-          "id": "b3fc9177",
-          "path": "_posts/2015-12-30-welcome-to-jekyll.markdown",
-          "output": "_posts/2015-12-30-welcome-to-jekyll.html",
-          "name": "2015-12-30-welcome-to-jekyll.markdown",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
         "17db0655": {
           "id": "17db0655",
           "path": "assets/css/global.css",
@@ -2906,33 +2861,11 @@
           "parents": [],
           "type": "html"
         },
-        "49889b0b": {
-          "id": "49889b0b",
-          "path": "_site/just-another-trial.html",
-          "output": "_site/just-another-trial.html",
-          "name": "just-another-trial.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "86453ed3": {
           "id": "86453ed3",
           "path": "_site/notes.html",
           "output": "_site/notes.html",
           "name": "notes.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "2045783a": {
-          "id": "2045783a",
-          "path": "_site/welcome-to-jekyll.html",
-          "output": "_site/welcome-to-jekyll.html",
-          "name": "welcome-to-jekyll.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -3118,6 +3051,17 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "d086ab77": {
+          "id": "d086ab77",
+          "path": "_site/deployment-to-github.html",
+          "output": "_site/deployment-to-github.html",
+          "name": "deployment-to-github.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -3129,7 +3073,7 @@
         "useCustomPort": false,
         "customServerUrl": "",
         "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html,htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
-        "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
+        "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components, _posts/**",
         "autoprefixerBrowsers": "last 4 versions",
         "liveRefreshDelay": 0,
         "disableImportAutoCompile": true,
