--- a/prepros.cfg
+++ b/prepros.cfg
@@ -3062,6 +3062,28 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "89dc86f1": {
+          "id": "89dc86f1",
+          "path": "_includes/notes-head.html",
+          "output": "_includes/notes-head.html",
+          "name": "notes-head.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b1c04577": {
+          "id": "b1c04577",
+          "path": "_layouts/notes.html",
+          "output": "_layouts/notes.html",
+          "name": "notes.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
